--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Edition</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Ratings</th>\n",
+       "      <th>Synopsis</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>BookCategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Complete Sherlock Holmes: 2 Boxes sets</td>\n",
+       "      <td>Sir Arthur Conan Doyle</td>\n",
+       "      <td>Mass Market Paperback,– 1 Oct 1986</td>\n",
+       "      <td>4.4 out of 5 stars</td>\n",
+       "      <td>960 customer reviews</td>\n",
+       "      <td>A collection of entire body of work of the She...</td>\n",
+       "      <td>Short Stories (Books)</td>\n",
+       "      <td>Crime, Thriller &amp; Mystery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Learn Docker - Fundamentals of Docker 18.x: Ev...</td>\n",
+       "      <td>Gabriel N. Schenker</td>\n",
+       "      <td>Paperback,– Import, 26 Apr 2018</td>\n",
+       "      <td>5.0 out of 5 stars</td>\n",
+       "      <td>1 customer review</td>\n",
+       "      <td>Enhance your software deployment workflow usin...</td>\n",
+       "      <td>Operating Systems Textbooks</td>\n",
+       "      <td>Computing, Internet &amp; Digital Media</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Big Girl</td>\n",
+       "      <td>Danielle Steel</td>\n",
+       "      <td>Paperback,– 17 Mar 2011</td>\n",
+       "      <td>5.0 out of 5 stars</td>\n",
+       "      <td>4 customer reviews</td>\n",
+       "      <td>'Watch out, world. Here I come!'\\nFor Victoria...</td>\n",
+       "      <td>Romance (Books)</td>\n",
+       "      <td>Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Think Python: How to Think Like a Computer Sci...</td>\n",
+       "      <td>Allen B. Downey</td>\n",
+       "      <td>Paperback,– 2016</td>\n",
+       "      <td>4.1 out of 5 stars</td>\n",
+       "      <td>11 customer reviews</td>\n",
+       "      <td>If you want to learn how to program, working w...</td>\n",
+       "      <td>Programming &amp; Software Development (Books)</td>\n",
+       "      <td>Computing, Internet &amp; Digital Media</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oxford Word Skills: Advanced - Idioms &amp; Phrasa...</td>\n",
+       "      <td>Redman Gairns</td>\n",
+       "      <td>Paperback,– 26 Dec 2011</td>\n",
+       "      <td>4.4 out of 5 stars</td>\n",
+       "      <td>9 customer reviews</td>\n",
+       "      <td>Learn and practise the verbs, prepositions and...</td>\n",
+       "      <td>Linguistics (Books)</td>\n",
+       "      <td>Language, Linguistics &amp; Writing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Title                  Author  \\\n",
+       "0         The Complete Sherlock Holmes: 2 Boxes sets  Sir Arthur Conan Doyle   \n",
+       "1  Learn Docker - Fundamentals of Docker 18.x: Ev...     Gabriel N. Schenker   \n",
+       "2                                           Big Girl          Danielle Steel   \n",
+       "3  Think Python: How to Think Like a Computer Sci...         Allen B. Downey   \n",
+       "4  Oxford Word Skills: Advanced - Idioms & Phrasa...           Redman Gairns   \n",
+       "\n",
+       "                              Edition             Reviews  \\\n",
+       "0  Mass Market Paperback,– 1 Oct 1986  4.4 out of 5 stars   \n",
+       "1     Paperback,– Import, 26 Apr 2018  5.0 out of 5 stars   \n",
+       "2             Paperback,– 17 Mar 2011  5.0 out of 5 stars   \n",
+       "3                    Paperback,– 2016  4.1 out of 5 stars   \n",
+       "4             Paperback,– 26 Dec 2011  4.4 out of 5 stars   \n",
+       "\n",
+       "                Ratings                                           Synopsis  \\\n",
+       "0  960 customer reviews  A collection of entire body of work of the She...   \n",
+       "1     1 customer review  Enhance your software deployment workflow usin...   \n",
+       "2    4 customer reviews  'Watch out, world. Here I come!'\\nFor Victoria...   \n",
+       "3   11 customer reviews  If you want to learn how to program, working w...   \n",
+       "4    9 customer reviews  Learn and practise the verbs, prepositions and...   \n",
+       "\n",
+       "                                        Genre  \\\n",
+       "0                       Short Stories (Books)   \n",
+       "1                 Operating Systems Textbooks   \n",
+       "2                             Romance (Books)   \n",
+       "3  Programming & Software Development (Books)   \n",
+       "4                         Linguistics (Books)   \n",
+       "\n",
+       "                          BookCategory  \n",
+       "0            Crime, Thriller & Mystery  \n",
+       "1  Computing, Internet & Digital Media  \n",
+       "2                              Romance  \n",
+       "3  Computing, Internet & Digital Media  \n",
+       "4      Language, Linguistics & Writing  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# upload data\n",
+    "test_data = pd.read_excel('test.xlsx')\n",
+    "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_excel('train.xlsx')\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,10 +355,6 @@
     }
    ],
    "source": [
-    "# upload data\n",
-    "test_data = pd.read_excel('test.xlsx')\n",
-    "train_data = pd.read_excel('train.xlsx')\n",
-    "\n",
     "# replace characters\n",
     "train_data.columns = train_data.columns.str.upper().str.strip().str.replace(' ', '_').str.replace('(', '').str.replace(')', '')\n",
     "test_data.columns = test_data.columns.str.upper().str.strip().str.replace(' ', '_').str.replace('(', '').str.replace(')', '')\n",
@@ -214,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2695,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2727,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2769,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2944,7 +3094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3119,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3139,7 +3289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3162,7 +3312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3183,7 +3333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3215,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3247,7 +3397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3267,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3294,7 +3444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3321,7 +3471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3383,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3553,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3688,7 +3838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3725,7 +3875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3762,7 +3912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3782,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +4129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3998,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4041,7 +4191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4106,7 +4256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4142,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4163,7 +4313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4196,7 +4346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4245,7 +4395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
