--- a/inzynierka.ipynb
+++ b/inzynierka.ipynb
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1859,17 @@
    "source": [
     "def xgb_model(X_train, y_train, X_test, n, m, l):\n",
     "    \"\"\"\"\n",
-    "    param: \n",
+    "    Returns score of fitted XGBoost model for varius parameters.\n",
+    "\n",
+    "        Parameters:\n",
+    "                X_train (numpy.ndarray): Training set X\n",
+    "                y_train (numpy.ndarray): Training set y\n",
+    "                X_test (numpy.ndarray): Testing set to predict values for\n",
+    "                n (int): number of model estimators\n",
+    "                m (int): value of model depth\n",
+    "                l (float): value of model learning rate\n",
+    "        Returns:\n",
+    "                score (float): training score of the model\n",
     "    \"\"\"\n",
     "    xgb=XGBRegressor(n_estimators=n, max_depth=m, learning_rate=l)\n",
     "\n",
@@ -1877,6 +1887,19 @@
    "outputs": [],
    "source": [
     "def vizualization(x_lim, y_lim, y_time, title1, title2, title3, x_label):\n",
+    "    \"\"\"\n",
+    "    Responsible for visualization of score and time run of tested algorithms.\n",
+    "    Returns three plots: score, time and both on the same plot.\n",
+    "\n",
+    "        Parameters:\n",
+    "                x_lim (numpy.ndarray): set of x values for plot\n",
+    "                y_lim (numpy.ndarray): set of y values for plot - score\n",
+    "                y_time (numpy.ndarray): array containing time samples\n",
+    "                title1 (string): string containing title for first plot\n",
+    "                title2 (string): string containing title for second plot\n",
+    "                title3 (string): string containing title for third plot\n",
+    "                x_label (string): string containing label for axis x\n",
+    "    \"\"\"\n",
     "\n",
     "    plt.figure()\n",
     "    plt.plot(x_lim, y_lim, '-o', color='orange')\n",
@@ -2296,8 +2319,19 @@
    "outputs": [],
    "source": [
     "def hist_model(X_train, y_train, X_test, m, n, d, l):\n",
-    "    \"\"\"\n",
-    "    param:\n",
+    "    \"\"\"\"\n",
+    "    Returns score of fitted HistGradientBoost model for varius parameters.\n",
+    "\n",
+    "        Parameters:\n",
+    "                X_train (numpy.ndarray): Training set X\n",
+    "                y_train (numpy.ndarray): Training set y\n",
+    "                X_test (numpy.ndarray): Testing set to predict values for\n",
+    "                m (int): number of iterations\n",
+    "                n (int): number of max leaf nodes\n",
+    "                d (int): value of model depth\n",
+    "                l (float): value of model learning rate\n",
+    "        Returns:\n",
+    "                score (float): training score of the model\n",
     "    \"\"\"\n",
     "    hist = HistGradientBoostingRegressor(max_iter=m, max_leaf_nodes=n, max_depth=d, learning_rate=l)\n",
     "\n",
@@ -2842,7 +2876,16 @@
    "source": [
     "def forest_model(X_train, y_train, X_test, n, m):\n",
     "    \"\"\"\"\n",
-    "    param: \n",
+    "    Returns score of fitted RandomForest model for varius parameters.\n",
+    "\n",
+    "        Parameters:\n",
+    "                X_train (numpy.ndarray): Training set X\n",
+    "                y_train (numpy.ndarray): Training set y\n",
+    "                X_test (numpy.ndarray): Testing set to predict values for\n",
+    "                n (int): number of model estimators\n",
+    "                m (int): value of model depth\n",
+    "        Returns:\n",
+    "                score (float): training score of the model\n",
     "    \"\"\"\n",
     "    rf = RandomForestRegressor(n_estimators=n, max_depth=m, random_state=50, n_jobs=-1)\n",
     "\n",
